libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/FETCHSUB.NSP
DEFINE DATA LOCAL
END-DEFINE

FETCH 'CALLSUB'

END
